[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/01_assets/08_Items/PassageButton.png" type="Texture" id=1]
[ext_resource path="res://src/02_scenes/03_Locations/01_Helper_Scenes/SecretPassageButton.gd" type="Script" id=2]
[ext_resource path="res://src/02_scenes/01_UI/06_InterractionIndicator/InterractionIndicator.tscn" type="PackedScene" id=3]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 6 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 26, 11 )

[sub_resource type="Animation" id=11]
resource_name = "activation"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "activated"
} ]
}

[sub_resource type="Animation" id=12]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="SecretPassageButton" type="Area2D"]
position = Vector2( -42, -103 )
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 10 )
hframes = 3
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 18 )
shape = SubResource( 9 )

[node name="InterractionIndicator" parent="." instance=ExtResource( 3 )]

[node name="ButtonAnimationPlayer" type="AnimationPlayer" parent="."]
anims/activation = SubResource( 11 )
anims/idle = SubResource( 12 )
[connection signal="body_entered" from="." to="." method="_on_SecretPassageButton_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_SecretPassageButton_body_exited"]
